--- a/Documentation/.gitignore
+++ b/Documentation/.gitignore
@@ -1,9 +1,9 @@
-###############
-#    folder   #
-###############
 /**/DROP/
 /**/TEMP/
 /**/packages/
 /**/bin/
 /**/obj/
 
+*.yml
+_site/**
+api/.manifest
