--- a/.editorconfig
+++ b/.editorconfig
@@ -17,7 +17,7 @@ indent_size = 4
 trim_trailing_whitespace = true
 
 #license header
-file_header_template = Copyright (c) ppy Pty Ltd <contact@ppy.sh>. Licensed under the MIT Licence.\nSee the LICENCE file in the repository root for full licence text.
+file_header_template = 
 
 #Roslyn naming styles
 
@@ -200,4 +200,4 @@ indent_size = 4
 trim_trailing_whitespace = true
 
 dotnet_diagnostic.OLOC001.words_in_name = 5
-dotnet_diagnostic.OLOC001.license_header = // Copyright (c) ppy Pty Ltd <contact@ppy.sh>. Licensed under the MIT Licence.\n// See the LICENCE file in the repository root for full licence text.
+dotnet_diagnostic.OLOC001.license_header = 
