--- a/Faraway.Engine/Faraway.Engine.csproj
+++ b/Faraway.Engine/Faraway.Engine.csproj
@@ -11,11 +11,13 @@
     <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
-    <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
+    <Compile Remove="UIComponents\**" />
+    <EmbeddedResource Remove="UIComponents\**" />
+    <None Remove="UIComponents\**" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="UIComponents\" />
+    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
+    <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
