--- a/Faraway.Engine/Faraway.Engine.csproj
+++ b/Faraway.Engine/Faraway.Engine.csproj
@@ -16,6 +16,7 @@
     <None Remove="UIComponents\**" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Aether.Physics2D" Version="1.7.0" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
   </ItemGroup>
