--- a/.github/workflows/engine-test-macos.yml
+++ b/.github/workflows/engine-test-macos.yml
@@ -1,4 +1,4 @@
-name: Faraway.Engine Test macOS Platform
+name: Reign.Engine Test macOS Platform
 
 on:
   push:
@@ -19,4 +19,4 @@ jobs:
       - name: Build
         run: dotnet build --no-restore
       - name: Test
-        run: dotnet test Faraway.Engine.Tests --no-build --verbosity normal
+        run: dotnet test Reign.Engine.Tests --no-build --verbosity normal
