--- a/.github/workflows/engine-test-windows.yml
+++ b/.github/workflows/engine-test-windows.yml
@@ -17,6 +17,6 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore
       - name: Build
-        run: dotnet build --no-restore
+        run: dotnet build Reign.Engine.Editor/Reign.Engine.Editor.csproj --no-restore
       - name: Test
         run: dotnet test Reign.Engine.Tests --no-build --verbosity normal
